<resources>
    <string name="app_name">SafeOrder</string>
    <string name="sp_name">SafeOrder</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Passwort</string>
    <string name="button_login">LOGIN</string>
    <string name="button_register">Registrieren</string>
    <string name="first_name">Vorname</string>
    <string name="last_name">Nachname</string>
    <string name="phone_number">Telefonnummer</string>
    <string name="choose_payment">Zahlungsweise wählen</string>
    <string name="restaurant_name">Restaurant</string>
    <string name="restaurant_address">Restaurant1_Adresse</string>
    <string name="filler_text">Lorem Ipsum</string>
    <string name="search">Suche</string>
    <string name="favorite">Favorisieren</string>
    <string name="restaurants_appbar_title">Restaurants</string>
    <string name="more">Mehr</string>
    <string name="userprofile_appbar_title">Nutzerprofil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message_filler">Nachricht</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="data_privacy">Datenschutz</string>
    <string name="logout">Logout</string>
    <string name="help">Hilfe</string>
    <string name="rate_us">Bewerte uns</string>
    <string name="contact">Kontakt</string>
    <string name="quantity">Menge</string>
    <string name="choose_takeout_time">Wählen Sie eine Abholzeit</string>
    <string name="price">Preis</string>
    <string name="total">Gesamtpreis</string>
    <string name="favorites">Favoriten</string>
    <string name="fullname">Nutzername</string>
    <string name="settings">Einstellungen</string>
    <string name="user">Nutzer</string>
    <string name="product_name">Name_Produkt</string>
    <string name="order">Bestellung aufgeben</string>
    <string name="back">Zurück</string>
    <string name="add_to_cart">Zum Warenkorb hinzufügen</string>
    <string name="quantity_number">Mengenanzahl</string>
    <string name="map_id">AIzaSyCxm3y9G6YAgyTSz4g7pjMKFpyyLboxkyE</string>
    <string name="show">Anzeigen</string>
    <string name="checkFirstName">Bitte Vorname eingeben!</string>
    <string name="checkLastName">Bitte Nachname eingeben!</string>
    <string name="checkEmail">Bitte E-Mail eingeben!</string>
    <string name="checkPassword">Bitte Passwort eingeben!</string>
    <string name="success_register">Danke für Ihre Registrierung!</string>
    <string name="success_login">Sie haben sich erfolgreich angemeldet.</string>
</resources>