<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/product_profile_topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/product_name"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:menu="@menu/product_profile_top_app_bar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/p_profile_product_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/p_profile_description_card">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/product_pic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/dice_2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/p_profile_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:padding="4dp"
                            android:text="@string/product_name"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:textSize="20dp"/>

                        <TextView
                            android:id="@+id/p_profile_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/price"
                            android:textColor="@color/black"
                            android:textSize="20dp"/>

                        <LinearLayout
                            android:layout_marginTop="30dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/p_profile_btn_plus"
                                style="@style/Widget.AppTheme.Button.IconButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:icon="@drawable/ic_baseline_add_circle_24"/>

                            <TextView
                                android:id="@+id/p_profile_product_quantity"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/quantity_number"
                                android:textSize="17dp"/>

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/p_profile_btn_minus"
                                style="@style/Widget.AppTheme.Button.IconButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                app:icon="@drawable/ic_remove_circle_white_24dp" />

                        </LinearLayout>

                        <com.google.android.material.button.MaterialButton
                            android:layout_marginTop="35dp"
                            android:id="@+id/p_profile_addToCart_btn"
                            android:padding="8dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_add_shopping_cart_white_24dp"
                            android:text="@string/add_to_cart"/>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/p_profile_description_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/p_profile_product_card">

                <TextView
                    android:id="@+id/p_profile_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Beschreibung"
                    android:textStyle="bold"/>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>